# rillan

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICES  README.md  RELEASE_TODO.md  ROADMAP.md  Taskfile.yml  agents.md  deny.toml  go.mod  go.sum  rust-toolchain.toml  rustfmt.toml
.sisyphus/plans/: rillan-linear-seed.md  rillan-milestone-06.md
adrs/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  README.md
cmd/rillan/: auth.go  auth_test.go  command_placeholders.go  config_commands.go  credential_flags.go  daemon_refresh.go  daemon_refresh_test.go  index.go  index_test.go  init.go  init_test.go  llm.go  llm_test.go  main.go  mcp.go  mcp_test.go  packaging_test.go  root.go  root_test.go  secretstore_test_hooks_test.go  serve.go  skill.go  skill_test.go  status.go  status_test.go
configs/: project.example.yaml  rillan.example.yaml
crates/agent/: Cargo.toml
crates/agent/src/: action_proposal.rs  context_budget.rs  context_builder.rs  context_package.rs  gating.rs  lib.rs  mcp_snapshot.rs  mcp_snapshot_builder.rs  orchestrator.rs  proposal_store.rs  roles.rs  runner.rs  skill_catalog.rs  skill_metrics.rs  tool_runtime.rs
crates/agent/src/skills/: mod.rs  read_only.rs  registry.rs  tool_runtime.rs  types.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  runtime_manager.rs  runtime_snapshot_builder.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/classify/: Cargo.toml
crates/classify/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: constants.rs  lib.rs  load.rs  paths.rs  resolve.rs  system_crypto.rs  types.rs  validate.rs  write_example.rs
crates/httpapi/: Cargo.toml
crates/httpapi/src/: admin_reload.rs  agent_proposal.rs  agent_task.rs  auth_middleware.rs  chat.rs  health.rs  lib.rs  middleware.rs  router.rs  runtime_snapshot.rs
crates/index/: Cargo.toml
crates/index/src/: chunker.rs  discovery.rs  graphify.rs  indexer.rs  lib.rs  schema.rs  store.rs  types.rs  vector_store.rs  vectors.rs
crates/modules/: Cargo.toml
crates/modules/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/ollama/: Cargo.toml
crates/ollama/src/: lib.rs
crates/openai/: Cargo.toml
crates/openai/src/: lib.rs  request_features.rs  types.rs  validate.rs
crates/policy/: Cargo.toml
crates/policy/src/: evaluator.rs  lib.rs  scanner.rs  types.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic_client.rs  host.rs  lib.rs  ollama_client.rs  openai_client.rs  stdio_client.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: embedder.rs  lib.rs  pipeline.rs  rewriter.rs
crates/rillan/: Cargo.toml
crates/rillan/src/: main.rs
crates/rillan/src/commands/: auth.rs  config.rs  daemon.rs  index.rs  init.rs  llm.rs  mcp.rs  mod.rs  serve.rs  skill.rs  status.rs
crates/routing/: Cargo.toml
crates/routing/src/: catalog.rs  decision.rs  lib.rs  status.rs  types.rs
crates/secretstore/: Cargo.toml
crates/secretstore/src/: lib.rs
crates/tokenize/: Cargo.toml
crates/tokenize/src/: lib.rs
crates/version/: Cargo.toml
crates/version/src/: lib.rs
docs/: architecture.md  audit-backlog.md  command-native-setup.md  development.md  reference.md
internal/agent/: action_proposal.go  context_budget.go  context_builder.go  context_builder_test.go  context_package.go  context_package_test.go  gating.go  gating_test.go  mcp_snapshot.go  mcp_snapshot_builder.go  mcp_snapshot_test.go  orchestrator.go  orchestrator_test.go  proposal_store.go  proposal_store_test.go  roles.go  runner.go  runner_test.go  skill_catalog.go  skill_catalog_test.go  skill_metrics.go  skill_metrics_test.go  tool_runtime.go  tool_runtime_test.go
internal/agent/skills/: read_only.go  registry.go  registry_test.go  tool_runtime.go  types.go
internal/app/: app.go  app_test.go  runtime_manager.go  runtime_manager_test.go  runtime_snapshot_builder.go  runtime_snapshot_builder_test.go
internal/audit/: store.go  store_test.go  types.go
internal/chat/: request.go
internal/classify/: classifier.go  classifier_test.go
internal/config/: config.go  load.go  load_test.go  system_crypto.go  validate.go  validate_test.go  write_example.go  write_example_test.go
internal/httpapi/: admin_reload_handler.go  admin_reload_handler_test.go  agent_proposal_handler.go  agent_task_handler.go  agent_task_handler_test.go  agent_transport.go  auth_middleware.go  auth_middleware_test.go  chat_completions_handler.go  chat_completions_handler_test.go  health_handler.go  health_handler_test.go  middleware.go  middleware_test.go  router.go  router_test.go  runtime_snapshot.go
internal/index/: chunker.go  chunker_test.go  discovery.go  discovery_test.go  graphify.go  graphify_status.go  graphify_test.go  indexer.go  indexer_test.go  schema.go  search_test.go  store.go  store_test.go  types.go  vector_store.go  vector_store_test.go  vectors.go
internal/modules/: catalog.go  catalog_test.go
internal/observability/: metrics.go  request_id.go
internal/ollama/: client.go  client_internal_test.go  client_test.go
internal/openai/: request_features.go  types.go  validate.go  validate_test.go
internal/policy/: evaluator.go  evaluator_test.go  scanner.go  scanner_test.go  types.go
internal/providers/: host.go  host_test.go  provider.go
internal/retrieval/: embedder.go  embedder_test.go  pipeline.go  pipeline_test.go  rewriter.go  rewriter_test.go
internal/routing/: catalog.go  catalog_test.go  decision.go  decision_test.go  status.go  status_test.go  types.go
internal/secretstore/: store.go  store_test.go
internal/version/: version.go
packaging/: README.md  validate-launchd.sh  validate-systemd.sh
packaging/launchd/: com.rillanai.rillan.plist  com.sidekickos.rillan.plist
packaging/systemd/: rillan.service
testdata/configs/: env-override.yaml  index-smoke.yaml  manual-qa.yaml  minimal.yaml  policy-invalid.yaml  policy-smoke.yaml
(+11 files in other folders)
