# SPDX-FileCopyrightText: 2026 Rillan AI LLC
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rillan-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Agent orchestration: context package, role catalog, approval gating, proposal store. ADR-007."

[dependencies]
async-trait = { workspace = true }
rillan-audit = { workspace = true }
rillan-config = { workspace = true }
rillan-index = { workspace = true }
rillan-policy = { workspace = true }
rillan-retrieval = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
