# SPDX-FileCopyrightText: 2026 Rillan AI LLC
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rillan-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Daemon wiring and lifecycle for the Rillan binary."

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
rillan-agent = { workspace = true }
rillan-audit = { workspace = true }
rillan-chat = { workspace = true }
rillan-classify = { workspace = true }
rillan-config = { workspace = true }
rillan-httpapi = { workspace = true }
rillan-index = { workspace = true }
rillan-modules = { workspace = true }
rillan-ollama = { workspace = true }
rillan-policy = { workspace = true }
rillan-providers = { workspace = true }
rillan-retrieval = { workspace = true }
rillan-routing = { workspace = true }
rillan-secretstore = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
