# SPDX-FileCopyrightText: 2026 Rillan AI LLC
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rillan-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Chat-request value types shared between Rillan layers."

[dependencies]
bytes = { workspace = true }
rillan-openai = { workspace = true }

[lints]
workspace = true
