[package]
name = "rillan-classify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Local intent classifier with graceful degradation. ADR-011."

[dependencies]
async-trait = { workspace = true }
rillan-chat = { workspace = true }
rillan-ollama = { workspace = true }
rillan-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
