[package]
name = "rillan-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Request-id propagation and lightweight metrics primitives."

[dependencies]
rand = { workspace = true }

[lints]
workspace = true
