[package]
name = "rillan-ollama"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Thin async client for the Ollama native HTTP API."

[dependencies]
reqwest = { workspace = true }
rillan-observability = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
