[package]
name = "rillan-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Regex-based secret scanner and policy evaluator for outbound LLM requests."

[dependencies]
regex = { workspace = true }
rillan-chat = { workspace = true }
rillan-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
