[package]
name = "rillan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Local OpenAI-compatible proxy daemon."

[[bin]]
name = "rillan"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
rillan-agent = { workspace = true }
rillan-app = { workspace = true }
rillan-config = { workspace = true }
rillan-index = { workspace = true }
rillan-secretstore = { workspace = true }
rillan-version = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
