[package]
name = "rillan-secretstore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "OS keyring abstraction with a swappable backend for tests."

[dependencies]
keyring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
